--- a/deploy/charts/emqx/templates/ingress.yaml
+++ b/deploy/charts/emqx/templates/ingress.yaml
@@ -1,5 +1,13 @@
 {{- if .Values.ingress.dashboard.enabled -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- $cleanSemVersion := trimPrefix "v" .Capabilities.KubeVersion.Version }}
+{{- if and .Values.ingress.dashboard.className (not (semverCompare ">=1.18.0" $cleanSemVersion)) }}
+  {{- if not (hasKey .Values.ingress.dashboard.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.dashboard.annotations "kubernetes.io/ingress.class" .Values.ingress.dashboard.className}}
+  {{- end }}
+{{- end }}
+{{- if semverCompare ">=1.19-0" $cleanSemVersion -}}
+apiVersion: networking.k8s.io/v1
+{{- else if semverCompare ">=1.14-0" $cleanSemVersion -}}
 apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
 apiVersion: extensions/v1beta1
@@ -17,15 +25,28 @@ metadata:
     {{- toYaml .Values.ingress.dashboard.annotations | nindent 4 }}
   {{- end }}
 spec:
+  {{- if and .Values.ingress.dashboard.className (semverCompare ">=1.18-0" $cleanSemVersion) }}
+  ingressClassName: {{ .Values.ingress.dashboard.className }}
+  {{- end }}
   rules:
   {{- range $host := .Values.ingress.dashboard.hosts }}
   - host: {{ $host }}
     http:
       paths:
       - path: /
+        {{- if semverCompare ">=1.19-0" $cleanSemVersion }}
+        pathType: Prefix
+        {{- end }}
         backend:
+          {{- if semverCompare ">=1.19-0" $cleanSemVersion }}
+          service:
+            name: {{ include "emqx.fullname" $ }}
+            port:
+              number: {{ $.Values.service.dashboard }}
+          {{- else }}
           serviceName: {{ include "emqx.fullname" $ }}
           servicePort: {{ $.Values.service.dashboard }}
+          {{- end }}
   {{- end -}}
   {{- if .Values.ingress.dashboard.tls }}
   tls:
@@ -34,7 +55,15 @@ spec:
 ---
 {{- end }}
 {{- if .Values.ingress.mgmt.enabled -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- $cleanSemVersion := trimPrefix "v" .Capabilities.KubeVersion.Version }}
+{{- if and .Values.ingress.mgmt.className (not (semverCompare ">=1.18.0" $cleanSemVersion)) }}
+  {{- if not (hasKey .Values.ingress.mgmt.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.mgmt.annotations "kubernetes.io/ingress.class" .Values.ingress.mgmt.className}}
+  {{- end }}
+{{- end }}
+{{- if semverCompare ">=1.19-0" $cleanSemVersion -}}
+apiVersion: networking.k8s.io/v1
+{{- else if ">=1.14-0" $cleanSemVersion -}}
 apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
 apiVersion: extensions/v1beta1
@@ -52,15 +81,28 @@ metadata:
     {{- toYaml .Values.ingress.mgmt.annotations | nindent 4 }}
   {{- end }}
 spec:
+  {{- if and .Values.ingress.mgmt.className (semverCompare ">=1.18-0" $cleanSemVersion) }}
+  ingressClassName: {{ .Values.ingress.mgmt.className }}
+  {{- end }}
   rules:
   {{- range $host := .Values.ingress.mgmt.hosts }}
   - host: {{ $host }}
     http:
       paths:
       - path: /
+        {{- if semverCompare ">=1.19-0" $cleanSemVersion }}
+        pathType: Prefix
+        {{- end }}
         backend:
+          {{- if semverCompare ">=1.19-0" $cleanSemVersion }}
+          service:
+            name: {{ include "emqx.fullname" $ }}
+            port:
+              number: {{ $.Values.service.mgmt }}
+          {{- else }}
           serviceName: {{ include "emqx.fullname" $ }}
           servicePort: {{ $.Values.service.mgmt }}
+          {{- end }}
   {{- end -}}
   {{- if .Values.ingress.mgmt.tls }}
   tls:
